--- a/UnrealCH5/UnrealCH5/UnrealCH5.vcxproj
+++ b/UnrealCH5/UnrealCH5/UnrealCH5.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="UnrealCH5.cpp" />
+    <ClCompile Include="MyActor.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyActor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
