--- a/UnrealCH5/UnrealCH5/UnrealCH5.vcxproj.filters
+++ b/UnrealCH5/UnrealCH5/UnrealCH5.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="UnrealCH5.cpp">
+    <ClCompile Include="MyActor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyActor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
